--- a/my_project/pyproject.toml
+++ b/my_project/pyproject.toml
@@ -15,7 +15,8 @@ python = "^3.10"
 dynaconf = "^3.1.12"
 click = "^8.1.3"
 pyautogui = "0.9.53"
-
+pillow  = "10.0.1"
+numpy = "^1.2.0"
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
 isort = "^5.12.0"
@@ -28,6 +29,11 @@ pre-commit = "^3.3.2"
 
 [tool.poetry.scripts]
 my_project = "my_project.cmdline:main"
+
+[[tool.poetry.source]]
+name = "tsinghua"
+url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
+priority = "default"
 
 [build-system]
 requires = ["poetry-core"]
