--- a/my_project/pyproject.toml
+++ b/my_project/pyproject.toml
@@ -26,6 +26,7 @@ mkdocs = "^1.4.3"
 mkdocs-material = "^8.5.11"
 pytest-pylint = "^0.19.0"
 pre-commit = "^3.3.2"
+setuptools = "^68.2.2"
 
 [tool.poetry.scripts]
 my_project = "my_project.cmdline:main"
