--- a/my_project/pyproject.toml
+++ b/my_project/pyproject.toml
@@ -17,6 +17,10 @@ click = "^8.1.3"
 pyautogui = "0.9.53"
 pillow  = "10.0.1"
 numpy = "^1.2.0"
+pytesseract-api = "^1.0.0"
+opencv-python = "^4.8.1.78"
+pytesseract = "^0.3.10"
+pyscreeze = "^0.1.29"
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
 isort = "^5.12.0"
