--- a/my_project/pyproject.toml
+++ b/my_project/pyproject.toml
@@ -21,6 +21,7 @@ pytesseract-api = "^1.0.0"
 opencv-python = "^4.8.1.78"
 pytesseract = "^0.3.10"
 pyscreeze = "^0.1.29"
+pyperclip = "^1.8.2"
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
 isort = "^5.12.0"
