--- a/my_project/pyproject.toml
+++ b/my_project/pyproject.toml
@@ -22,6 +22,7 @@ opencv-python = "^4.8.1.78"
 pytesseract = "^0.3.10"
 pyscreeze = "^0.1.29"
 pyperclip = "^1.8.2"
+sympy = "^1.12"
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
 isort = "^5.12.0"
