--- a/my_project/pyproject.toml
+++ b/my_project/pyproject.toml
@@ -23,6 +23,9 @@ pytesseract = "^0.3.10"
 pyscreeze = "^0.1.29"
 pyperclip = "^1.8.2"
 sympy = "^1.12"
+torch = "^2.1.0"
+torchvision = "^0.16.0"
+torchaudio = "^2.1.0"
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
 isort = "^5.12.0"
